<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="your_name">Your name</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_code">Send code</string>
    <string name="enter_a_code">Enter a code</string>
    <string name="hello_world">Hello World</string>
    <string name="exit">Exit</string>
    <string name="update">Update</string>
</resources>