<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_title"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        />

    <EditText
        android:id="@+id/et_desk"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        />
    
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"/>



</LinearLayout>